src/styles/blocks/page.css
/* Page */

.page,
.page__body {
	height: 100%;
}

.page {
	background-color: var(--color-background-primary);
	color: var(--color-text-primary);
	line-height: 1.2;
	font-family: var(--font-family-text);
}

/* Body */

.page__body {
	display: grid;
	grid-template-rows: auto 1fr auto;
	margin: 0;
}

